[tool.poetry]
name = "bilt_transactions"
version = "0.1.0"
description = "Parse an MHTML file exported from Bilt.com, save transactions in CSV format."
authors = ["John Conery"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
unmhtml = "^0.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
