[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project]
name = "bilt_transactions"
dynamic = ["version"]
description = "Parse an MHTML file exported from Bilt.com, save transactions in CSV format."
authors = [{ name = "John Conery", email = "jconery@icloud.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "rich>=14.3.3",
    "setuptools>=82.0.0",
    "unmhtml>=0.2.0",
]

[project.scripts]
bilt_transactions = "bilt_transactions.main:main"

[tool.hatch.version]
path = "src/bilt_transactions/__about__.py"

